<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:showIn="@layout/fragment_home">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cardview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        card_view:cardCornerRadius="5dp">

       <ImageView
            android:id="@+id/card_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/card_template"
            android:scaleType="fitXY"/>

        <LinearLayout
            android:id="@+id/card_rel_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_marginTop="40dp"
            android:gravity="center_vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/full_name_text"
                    android:layout_marginRight="5dp"
                    android:textColor="@color/title"
                    android:textStyle="bold"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/person_name"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/full_name_text"
                    android:layout_marginBottom="5dp"
                    android:textSize="16sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number_text"
                    android:layout_marginRight="5dp"
                    android:textColor="@color/title"
                    android:textStyle="bold"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/person_phone"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number_text"
                    android:layout_marginBottom="5dp"
                    android:textSize="16sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_text"
                    android:layout_marginRight="5dp"
                    android:textColor="@color/title"
                    android:textStyle="bold"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/email_person"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/email_text"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <!--<LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/edit_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_edit"
            android:textColor="#ffffff"
            />

        <Button
            android:id="@+id/share_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_share_icon"
            android:layout_marginLeft="3dp" />

    </LinearLayout> -->

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@+id/cardview"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/barcode_image_text"
        android:src="@drawable/ic_launcher"
        android:visibility="invisible"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_text"
        android:textColor="@color/white"
        android:background="@color/colorAccent"
        android:textSize="16sp"
        android:id="@+id/sendButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>